<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".select_mode" >

    <TextView
        android:id="@+id/title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/btn_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@color/logo_bg"
        android:onClick="onClick"
        android:text="@string/btn_check"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_check"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/logo_bg"
        android:onClick="onClick"
        android:text="@string/btn_record"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_record"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/logo_bg"
        android:onClick="onClick"
        android:text="@string/btn_upload"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_studentID"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_upload"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:text="@string/txt_studentID"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/input_studentID"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_studentID"
        android:layout_alignLeft="@+id/input_studentName"
        android:layout_toRightOf="@id/txt_studentID"
        android:ems="10" />

    <TextView
        android:id="@+id/txt_studentName"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_studentID"
        android:layout_below="@+id/txt_studentID"
        android:layout_marginTop="20dp"
        android:text="@string/txt_studentName"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/input_studentName"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_studentName"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/txt_studentName"
        android:ems="10" />


    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_studentName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/logo_bg"
        android:text="@string/btn_confirm"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:visibility="invisible" />



</RelativeLayout>
